# mannigrad

./: README.md  notebook1.ipynb  pyproject.toml  setup.py
ManniGrad/: nn.py  pyproject.toml
ManniGrad/ManniGrad/: enigne.py  nn.py  utils.py
ManniGrad/src/mannigrad/: __init__.py  nn.py  utils.py
example/: train_model.py
