[project]
name = "micrograd"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "mannigrad==0.1.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "setuptools>=80.9.0",
]

[tool.uv.workspace]
members = [
    "mannigrad",
]

[tool.uv.sources]
mannigrad = { workspace = true }
