[project]
name = "mannigrad"
version = "0.1.3"
description = "A tiny autograd engine and neural network library."
readme = "README.md"
authors = [
    { name = "vainavinair", email = "vainavinair2009558@gmail.com" }
]
requires-python = ">=3.12.4"
dependencies = []

[project.scripts]
mannigrad = "mannigrad:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
